# uwu-crypt

./: .gitignore  Cargo.toml  README.md  esbuild.config.mjs  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json  tsconfig.tsbuildinfo
.cargo/: config.toml
.github/workflows/: release.yml
plugin/: crypto.worker.ts  fileProcessor.ts  imageProcessor.ts  main.ts  resourceProcessor.ts  setupModal.ts  uwuView.ts  vaultManager.ts
src/: lib.rs
