[package]
name = "uwu-crypt"
version = "0.3.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chacha20poly1305 = "0.11.0-rc.3"
chacha20 = "0.10.0"
argon2 = "0.6.0-rc.8"
zeroize = { version = "1.8.2", features = ["derive"] }
getrandom = { version = "0.4.2", features = ["wasm_js"] }
serde = { version = "1.0.228", features = ["derive"] }
rmp-serde = "1.3.1"
blake3 = "1.8.4"
zstd = "0.13.3"
wasm-bindgen = "0.2.118"
js-sys = "0.3.95"
wasm-bindgen-futures = "0.4.68"
serde_bytes = "0.11.19"
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort" 
